--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -7,7 +7,7 @@
   .social {
     box-sizing: border-box;
     padding-bottom: 20px;
-    padding-top: 20px;
+    padding-top: 15px;
     border-top: 1px solid #d9d9d9;
     border-bottom: 1px solid #d9d9d9;
   }
@@ -16,7 +16,7 @@
 .social__list {
   display: grid;
   row-gap: 10px;
-  width: 130px;
+  width: 55%;
   grid-template-columns: repeat(3, 1fr);
   align-items: baseline;
   justify-content: center;
