--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -18,6 +18,7 @@
   border: none;
   background-color: transparent;
   text-transform: uppercase;
+  font-family: $font__main;
   line-height: 40px;
   cursor: pointer;
   width: 49px;
