--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -5,10 +5,11 @@
 
   &::after {
     position: absolute;
-    top: 93%;
+    top: 78%;
     left: 0;
     display: block;
-    width: 106%;
+    width: 85%;
+    transform: translateX(20px);
     height: 1px;
     background-color: #d9d9d9;
     content: "";
@@ -19,6 +20,10 @@
   .program {
     padding-right: 350px;
     height: 372px;
+
+    &::after {
+      display: none;
+    }
   }
 }
 
@@ -33,8 +38,20 @@
   padding: 30px 33px 12px 19px;
 }
 
+@media (min-width: $tablet-width) {
+  .program--slim {
+    padding: 74px 33px 12px 19px;
+  }
+}
+
 .program--fat {
   padding: 25px 33px 12px 19px;
+}
+
+@media (min-width: $tablet-width) {
+  .program--fat {
+    padding: 78px 30px 12px 19px;
+  }
 }
 
 .program__title {
@@ -73,8 +90,16 @@
   display: block;
   width: 36px;
   height: 50px;
-  background-image: url("../../img/svg/icon_cat-slim.svg");
+  background-image: url("../img/svg/icon_cat-slim.svg");
+  background-repeat: no-repeat;
   content: "";
+}
+
+@media (min-width: $tablet-width) {
+  .program__title--slim::after {
+    width: 140px;
+    height: 194px;
+  }
 }
 
 .program__title--fat::after {
@@ -84,8 +109,14 @@
   display: block;
   width: 67px;
   height: 28px;
-  background-image: url("../../img/svg/icon_cat-pro.svg");
+  background-image: url("../img/svg/icon_cat-pro.svg");
   content: "";
+}
+
+@media (min-width: $tablet-width) {
+  .program__title {
+    padding-left: 34px;
+  }
 }
 
 @media (min-width: $desktop-width) {
@@ -96,10 +127,10 @@
 
 @media (min-width: $tablet-width) and (max-width: $desktop-width) {
   .program__title::before {
-    /*width: 200px;
-    height: 200px;*/
-    top: 20px;
-    left: 120%;
+    width: 200px;
+    height: 200px;
+    top: 15px;
+    left: 65%;
   }
 
   .program__title--slim::after,
@@ -125,13 +156,19 @@
 }
 
 .program__description {
-  padding: 29px 0 32px 0;
+  padding: 29px 3px 32px 0;
   margin: 0;
   color: $color__dark-grey;
   font-family: $font__standard;
 
   @include font-size(14,16);
   @include line-height(14,18,16,24);
+}
+
+@media (min-width: $tablet-width) {
+  .program__description {
+    padding: 27px 282px 40px 33px;
+  }
 }
 
 .program__link {
@@ -144,4 +181,10 @@
   @include font-size(16,20);
   @include line-height(16,16,20,29.6);
   @include link($color__black);
+}
+
+@media (min-width: $tablet-width) {
+  .program__link {
+    padding: 10px 0 12px 33px;
+  }
 }
