--- a/source/sass/blocks/demo-cat.scss
+++ b/source/sass/blocks/demo-cat.scss
@@ -13,6 +13,13 @@
   @include font-size(36,60);
 }
 
+@media (min-width: $tablet-width) {
+  .demo-cat__title {
+    margin: 0 0 66px 0;
+  }
+
+}
+
 .demo-cat__subtitle {
   color: $color__dark-grey;
   font-family: $font__standard;
@@ -21,6 +28,12 @@
   @include font-size(14,16);
   padding-bottom: 20px;
   margin: 0;
+}
+
+@media (min-width: $tablet-width) {
+  .demo-cat__subtitle {
+    padding: 0 30px 52px 0;
+  }
 }
 
 .demo-cat__list {
@@ -49,6 +62,12 @@
   width: 122px;
 }
 
+@media (min-width: $tablet-width) {
+  .demo-cat__item {
+    width: 162px;
+  }
+}
+
 .demo-cat__item--wide {
   grid-column: 1 / -1;
   width: 100%;
@@ -62,6 +81,8 @@
 @media (min-width: $tablet_width) and (max-width: $desktop-width) {
   .demo-cat__item--wide {
     grid-column: 3;
+    margin-left: 10px;
+    align-items: flex-end;
   }
 }
 
@@ -75,6 +96,12 @@
 
   @include line-height(24,24,30,37);
   @include font-size(24,30);
+}
+
+@media (min-width: $tablet-width) {
+  .demo-cat__importance {
+    padding: 15px 0 16px 0;
+  }
 }
 
 .demo-cat__description {
@@ -91,7 +118,33 @@
   @include font-size(12,14);
 }
 
+@media (min-width: $tablet-width) {
+  .demo-cat__description br {
+    display: none;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .demo-cat__description {
+    top: 64px;
+  }
+}
 
 .demo-cat__expenses {
   text-align: center;
+  margin: 12px 0 14px 0;
+}
+
+@media (min-width: $tablet-width) {
+  .demo-cat__expenses {
+    margin: 12px 6px 9px 0;
+    text-align: right;
+  }
+}
+
+@media (min-width: $tablet-width) {
+  .demo-cat__cost {
+    margin: 0 0 10px 0;
+    text-align: right;
+  }
 }
