--- a/source/sass/blocks/header-nav.scss
+++ b/source/sass/blocks/header-nav.scss
@@ -4,6 +4,12 @@
   }
 }
 
+@media (min-width: $desktop-width) {
+  .header-nav {
+    width: 40%;
+  }
+}
+
 .header-nav__list {
   position: absolute;
   top: 65px;
@@ -29,6 +35,16 @@
     position: static;
     display: flex;
     column-gap: 7.7%;
+    opacity: 1;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .header-nav__list {
+    position: static;
+    display: flex;
+    column-gap: 3.5%;
+    background-color: transparent;
     opacity: 1;
   }
 }
@@ -65,5 +81,6 @@
   .header-nav__link {
     font-size: calc(20 / 16) + rem;
     line-height: calc(29.64 / 20);
+    color: $color__white;
   }
 }
