--- a/source/sass/blocks/promo-outer.scss
+++ b/source/sass/blocks/promo-outer.scss
@@ -15,7 +15,7 @@
 
 @media (min-width: $desktop-width) {
   .promo-outer {
-    background-image: linear-gradient(to right, $color__white 50%, transparent 50%), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/header_happy-cat.jpg");
+    background-image: linear-gradient(to top, #ffffff 80px, transparent 80px), linear-gradient(to right, $color__white 50%, transparent 50%), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/header_happy-cat.jpg");
     background-position: top right;
   }
 }
