--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -6,13 +6,23 @@
   max-width: $desktop-width;
 }
 
-@media (min-width: $tablet-width)/* and (max-width: $desktop-width)*/ {
+@media (min-width: $tablet-width) {
   .promo {
     align-items: flex-start;
     box-sizing: border-box;
     padding-top: 30px;
     margin-left: 90px;
     padding-bottom: 500px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .promo {
+    align-items: flex-start;
+    box-sizing: border-box;
+    padding-top: 85px;
+    margin-left: 80px;
+    padding-bottom: 240px;
   }
 }
 
@@ -83,5 +93,14 @@
     padding-top: 10px;
     padding-bottom: 7px;
     width: 38%;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .promo__link {
+    box-sizing: border-box;
+    padding-top: 10px;
+    padding-bottom: 7px;
+    width: 19%;
   }
 }
