--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -167,7 +167,7 @@
 
 @media (min-width: $tablet-width) {
   .program__description {
-    padding: 27px 282px 40px 33px;
+    padding: 27px 43% 40px 33px;
   }
 }
 
