--- a/source/sass/blocks/promo-outer.scss
+++ b/source/sass/blocks/promo-outer.scss
@@ -15,7 +15,25 @@
 
 @media (min-width: $desktop-width) {
   .promo-outer {
-    background-image: linear-gradient(to top, #ffffff 80px, transparent 80px), linear-gradient(to right, $color__white 50%, transparent 50%), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/header_happy-cat.jpg");
-    background-position: top right;
+    position: relative;
+    background-image: none;
+    background-color: $color__white;
+
+    &::after {
+      position: absolute;
+      top: -18%;
+      right: 0;
+      width: 50%;
+      height: 695px;
+      content: "";
+      background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/header_happy-cat.jpg");
+      background-position: right top;
+      background-repeat: no-repeat;
+    }
   }
 }
+/*
+
+background-image: linear-gradient(to top, #ffffff 80px, transparent 80px), linear-gradient(to right, $color__white 50%, transparent 50%), linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/header_happy-cat.jpg");
+background-position: top right;
+*/
