--- a/source/sass/blocks/additive.scss
+++ b/source/sass/blocks/additive.scss
@@ -1,15 +1,29 @@
 .additive {
   display: grid;
+  padding-top: 13px;
   border-bottom: 1px solid #ebebeb;
   border-top: 1px solid #ebebeb;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
   width: 100%;
 }
 
 @media (min-width: $tablet-width) {
   .additive {
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    flex-direction: column;
     border: 1px solid $color__light-grey;
+    padding-bottom: 25px;
+  }
+}
+
+
+
+@media (min-width: $tablet-width) {
+  .additive__wrapper {
+    display: grid;
+    row-gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 14px 38px 0 38px;
   }
 }
 
@@ -20,7 +34,9 @@
 }
 
 .additive__list {
-  @include reset-list();
+  margin: 0 0 14px 0;
+  padding: 0;
+  list-style-type: none;
 }
 
 @media (min-width: $tablet-width) {
@@ -41,10 +57,18 @@
 }
 
 .additive__title {
+  margin: 0 0 14px 0;
   font-weight: 400;
+  text-transform: uppercase;
 
   @include line-height(16,16,20,20);
   @include font-size(16,20);
+}
+
+@media (min-width: $tablet-width){
+  .additive__title {
+    grid-column: 1 / 2;
+  }
 }
 
 .additive_count {
@@ -53,7 +77,7 @@
 
 @media (min-width: $tablet-width) and (max-width: $desktop-width) {
   .additive__link {
-    grid-row: 2 / 3;
+/*    grid-row: 2 / 3;*/
     grid-column: 1 / -1;
   }
 }
