--- a/source/sass/blocks/demo-cat.scss
+++ b/source/sass/blocks/demo-cat.scss
@@ -9,10 +9,11 @@
     padding: 25px 0 26px 0;
   }
 }
-
-.demo-cat {
-  box-sizing: border-box;
-  padding: 5px 0 26px 0;
+@media (min-width: $desktop-width) {
+  .demo-cat {
+    box-sizing: border-box;
+    padding: 5px 0 26px 0;
+  }
 }
 
 .demo-cat__title {
@@ -94,7 +95,7 @@
   }
 }
 
-@media (min-width: $tablet_width) {
+@media (min-width: $desktop-width) {
   .demo-cat__list {
     justify-content: space-between;
     width: 58%;
