--- a/source/sass/blocks/menu-toggle.scss
+++ b/source/sass/blocks/menu-toggle.scss
@@ -25,10 +25,16 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    background: currentColor;
+    background: #000000;
     transform: translate(-50%, -50%);
     transition: 0.5s;
     transition-timing-function: ease-in-out;
+  }
+}
+
+@media (max-width: $tablet-width - 1px) {
+  .menu-toggle--noJS {
+    display: none;
   }
 }
 
