--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -4,8 +4,10 @@
 }
 
 .product__title {
+  margin: 0 0 13px 0;
   text-transform: uppercase;
   font-weight: 400;
+  width: 53%;
 
   @include line-height(16,20,20,24);
   @include font-size(16,20);
@@ -13,6 +15,8 @@
 
 @media (min-width: $tablet-width) {
   .product__title {
+    width: 60%;
+    padding: 40px 35px 0 50px;
     text-align: center;
   }
 }
@@ -30,6 +34,8 @@
 
 @media (min-width: $tablet-width) {
   .product__item {
+    padding-bottom: 8px;
+    margin-bottom: 7px;
     border-bottom: 1px solid $color__light-grey;
   }
 }
@@ -39,6 +45,13 @@
   flex-direction: column;
 
   @include reset-list();
+}
+
+@media (min-width: $tablet-width) {
+  .product__list {
+    margin-top: 20px;
+    margin-bottom: 16px;
+  }
 }
 
 .product__value {
