--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -1,13 +1,18 @@
 .stock {
   position: relative;
-  padding-top: 110px;
-  padding-bottom: 140px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  padding-top: 130px;
+  padding-bottom: 43px;
+  min-height: 290px;
   color: $color__white;
   background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/decoration/catalog_cat-on-bag.jpg");
   background-repeat: no-repeat;
   background-color: #29530f;
   background-position: 50% 50%;
-  background-size: contain;
+  background-size: cover ;
   text-align: center;
 
   &::before {
@@ -45,12 +50,14 @@
     justify-self: center;
     padding-top: 40px;
     background-position: 50% 50%;
-    background-size: contain;
+    background-size: cover;
     text-align: right;
   }
 }
 
 .stock__description {
+  width: 70%;
+  margin: 0;
   font-family: $font__standard;
   line-height: 1.25;
   font-size: 1rem;
