--- a/source/sass/blocks/workflow.scss
+++ b/source/sass/blocks/workflow.scss
@@ -83,7 +83,7 @@
     top: -40px;
     left: 115px;
     z-index: -1;
-    display: flex;
+    display: none;
     width: 150px;
     height: 150px;
     padding: 0;
@@ -104,7 +104,7 @@
   }
 }
 
-@media (max-width: $tablet-width) {
+@media (max-width: $tablet-width - 1px) {
   .workflow__item {
     display: block;
     box-sizing: border-box;
@@ -141,7 +141,7 @@
   .workflow__item {
     flex-direction: column;
     min-height: 156px;
-    padding: 113px 65px 10px 0;
+    padding: 113px 0 10px 0;
     width: 100%;
 
     &::before {
@@ -151,6 +151,10 @@
       margin-bottom: 20px;
       width: 80px;
       height: 80px;
+    }
+
+    &::after {
+      display: flex;
     }
   }
 }
