--- a/source/sass/blocks/product-block.scss
+++ b/source/sass/blocks/product-block.scss
@@ -12,7 +12,6 @@
 @media (min-width: $tablet-width) {
   .product-block {
     grid-template-columns: 1fr;
-/*    height: 430px;*/
     background-color: $color__grey;
     padding: 0 36px 37px 36px;
   }
@@ -35,9 +34,24 @@
   border-bottom: 2px solid $color__grey;
 }
 
+@media (min-width: $tablet-width) {
+  .product-block--more {
+    padding-top: 85px;
+    border: 2px solid $color__grey;
+  }
+}
+
 .product-block__title--more {
   margin: 0 0 0 0;
   text-transform: uppercase;
+}
+
+@media (min-width: $tablet-width) {
+  .product-block__title--more {
+    width: 70%;
+    margin-top: 77px;
+    margin-bottom: 13px;
+  }
 }
 
 .product-block__description {
@@ -46,4 +60,14 @@
 
   @include line-height(12,16,16,18);
   @include font-size(12,16);
+}
+
+@media (min-width: $tablet-width) {
+  .product-block__description {
+    width: 70%;
+  }
+}
+
+.product__button {
+  margin-top: auto;
 }
