--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -27,13 +27,17 @@
   }
 }
 
-@media (min-width: $tablet-width) and (max-width: $desktop-width) {
+@media (min-width: $tablet-width) {
   .stock {
+    min-height: 200px;
+    padding-top: 72px;
+    justify-content: flex-start;
     background-color: transparent;
-    background-image: url("../img/decoration/catalog_cat-on-bag@2x.jpg");
+    background-image: linear-gradient(rgba(104, 183, 56, 0.85), rgba(104, 183, 56, 0.85)), url("../img/decoration/catalog_cat-on-bag@2x.jpg");
     background-position: 50% 50%;
     background-size: cover;
-    text-align: right;
+    text-align: left;
+    padding-right: 115px;
 
     &::before {
       top: 50%;
@@ -61,4 +65,11 @@
   font-family: $font__standard;
   line-height: 1.25;
   font-size: 1rem;
+}
+
+@media (min-width: $tablet-width) {
+  .stock__description {
+    align-self: flex-end;
+    width: 30%;
+  }
 }
