--- a/source/sass/blocks/addons.scss
+++ b/source/sass/blocks/addons.scss
@@ -31,11 +31,8 @@
   }
 }
 
-
 @media (min-width: $desktop-width) {
   .addons__inner {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 80px;
+    padding-top: 21px;
   }
 }
