--- a/source/sass/blocks/form-group.scss
+++ b/source/sass/blocks/form-group.scss
@@ -65,6 +65,7 @@
 .form-group__item {
   display: flex;
   flex-grow: 1;
+  align-items: baseline;
 }
 
 .form-group__label {
@@ -143,6 +144,7 @@
 .form-group__input {
   justify-content: flex-end;
   flex: 1 1 auto;
+  min-height: 39px;
 }
 
 .form-group__input--comment {
