--- a/source/sass/blocks/main-form.scss
+++ b/source/sass/blocks/main-form.scss
@@ -11,7 +11,7 @@
 }
 
 .main-form__title {
-  margin-bottom: 37px;
+  margin: 28px 0 37px 0;
   font-weight: 400;
 
   @include line-height(36,36,60,60);
@@ -19,7 +19,7 @@
 }
 
 .main-form__description {
-  margin-bottom: 37px;
+  margin: 0 0 14px 0;
   text-transform: uppercase;
 
   @include line-height(14,18,20,30);
