--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -43,3 +43,4 @@
 @import "./blocks/main-form.scss";
 @import "./blocks/form.scss";
 @import "./blocks/form-group.scss";
+@import "./blocks/extra.scss";
