--- a/source/sass/blocks/addons.scss
+++ b/source/sass/blocks/addons.scss
@@ -16,23 +16,39 @@
   }
 }
 
+@media (min-width: $desktop-width) {
+  .addons {
+    display: grid;
+    grid-template-columns: 70% 30%;
+  }
+}
+
+.addons__title {
+  margin-bottom: 35px;
+  font-weight: 400;
+
+  @include line-height(24,24,36,36);
+  @include font-size(24,36);
+}
+
+@media (min-width: $tablet-width) {
+  .addons__title {
+    padding-left: 70px;
+    margin-bottom: 80px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .addons__title {
+    grid-column: 1 / -1;
+    grid-row: 1 / 2;
+  }
+}
+
 @media (min-width: $tablet-width) {
   .addons::after {
     top: 23px;
     right: 0;
     width: 100vw;
-  }
-}
-
-@media (min-width: $tablet-width) {
-  .addons__inner {
-    padding-top: 13px;
-    padding-bottom: 38px;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .addons__inner {
-    padding-top: 21px;
   }
 }
