Вносит правки по замечаниям

--- a/source/sass/blocks/demo-cat.scss
+++ b/source/sass/blocks/demo-cat.scss
@@ -82,7 +82,8 @@
 .demo-cat__list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
+  column-gap: 10%;
   padding: 0 0 16px 0;
 
   @include reset-list();
@@ -90,7 +91,8 @@
 
 @media (min-width: $tablet_width) {
   .demo-cat__list {
-    justify-content: space-between;
+    justify-content: center;
+    column-gap: 9%;
     width: 52%;
   }
 }
