--- a/source/sass/blocks/stock.scss
+++ b/source/sass/blocks/stock.scss
@@ -49,10 +49,14 @@
 
 @media (min-width: $desktop-width) {
   .stock {
-   grid-column: 4 / 5;
-    width: 100%;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    width: 22%;
+    height: 289px;
+    padding-right: 40px;
     justify-self: center;
-    padding-top: 40px;
+    padding-top: 185px;
+    background-image: url("../img/decoration/catalog_cat-on-bag.jpg");
     background-position: 50% 50%;
     background-size: cover;
     text-align: right;
@@ -70,6 +74,12 @@
 @media (min-width: $tablet-width) {
   .stock__description {
     align-self: flex-end;
-    width: 30%;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .stock__description {
+    align-self: center;
+    text-align: center;
   }
 }
