--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -30,6 +30,6 @@ $desktop-width: 1300px;
 $font__main: "Oswald", sans-serif;
 $font__standard: "Arial", sans-serif;
 
-//font-size default, copy on mixins.scss
+//font-size default
 $font-mobi-size: 14;
 $font-default-size: 16;
