--- a/source/sass/blocks/addons.scss
+++ b/source/sass/blocks/addons.scss
@@ -16,14 +16,8 @@
   }
 }
 
-@media (min-width: $desktop-width) {
-  .addons {
-    display: grid;
-    grid-template-columns: 70% 30%;
-  }
-}
-
 .addons__title {
+  padding-left: 20px;
   margin-bottom: 35px;
   font-weight: 400;
 
@@ -40,8 +34,10 @@
 
 @media (min-width: $desktop-width) {
   .addons__title {
-    grid-column: 1 / -1;
-    grid-row: 1 / 2;
+    width: 1300px;
+    margin-left: auto;
+    margin-right: auto;
+
   }
 }
 
