--- a/source/sass/blocks/control.scss
+++ b/source/sass/blocks/control.scss
@@ -1,7 +1,7 @@
 .control {
   position: relative;
   display: flex;
-  width: 210px;
+  width: 65.5%;
   margin: 0 auto;
   align-items: center;
   justify-content: space-between;
@@ -12,6 +12,12 @@
   .control {
     padding: 20px 0;
     width: 592px;
+  }
+}
+
+@media (max-width: $tablet-width - 1px) {
+  .control__scale {
+    width: 41%;
   }
 }
 
@@ -29,7 +35,7 @@
 }
 
 .control__bar {
-  width: 86px;
+  width: 100%;
   height: 14px;
   background-color: $color__white;
   border: 1px solid $color__light-grey;
@@ -50,7 +56,7 @@
   position: relative;
   top: -12px;
   left: 4px;
-  width: 36px;
+  width: 42%;
   height: 6px;
   border: none;
   border-radius: 6px;
