--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,8 +4,10 @@
 //global values
 @import "./global/variables.scss";
 @import "./global/visually-hidden.scss";
-@import "./global/mixins.scss";
 @import "./global/block-container.scss";
+
+//mixins
+@import "./global/mixins.scss";
 
 //fonts
 @import "./global/fonts.scss";
@@ -26,7 +28,7 @@
 @import "./blocks/demo-inner.scss";
 @import "./blocks/demo-cat.scss";
 @import "./blocks/demo-slider.scss";
-@import "blocks/demo-slider";
+@import "./blocks/demo-slider";
 @import "./blocks/control.scss";
 @import "./blocks/footer.scss";
 @import "./blocks/contacts-outer.scss";
@@ -41,7 +43,7 @@
 @import "./blocks/product-block.scss";
 @import "./blocks/additives.scss";
 @import "./blocks/addons.scss";
-@import "./blocks/additive.scss";
+@import "./blocks/addons-inner.scss";
 @import "./blocks/stock.scss";
 @import "./blocks/main-form.scss";
 @import "./blocks/form.scss";
