--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,5 @@
-
+/*//sass includes
+@use "./sass:math";*/
 
 //global values
 @import "./global/variables.scss";
@@ -48,6 +49,3 @@
 @import "./blocks/form.scss";
 @import "./blocks/form-group.scss";
 @import "./blocks/extra.scss";
-
-//sass includes
-@use "./sass:math";
